# Helioscope

./: .gitignore  benchmark.ipynb  imagen.py  index.html  package-lock.json  package.json
gui/: imagenRunner.py  package-lock.json  package.json  run_model.py  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: MapPicker.tsx  ResultsView.tsx  Sidebar.tsx
src-tauri/: Cargo.toml  abilities.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BatchProcessor.tsx  Sidebar.tsx
